--- a/package.json
+++ b/package.json
@@ -5,5 +5,25 @@
   "main": "index.js",
   "repository": "git@github.com:finsterdexter/simple-signalr-tester.git",
   "author": "finsterdexter",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@aspnet/signalr": "^1.0.4",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "mini-css-extract-plugin": "^0.4.4",
+    "webpack-cli": "^3.1.2"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.26.0",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --history-api-fallback --inline --progress"
+  }
 }
